# Nyx-Project

./: .env.example  .gitignore  APPLY.md  Anchor.toml  BUSINESS.md  Cargo.toml  DEPLOYMENTS.md  README.md  SUBMISSION.md  deploy-v2.sh  dsdsdsds  fd.cjs  fix-and-deploy.sh  get-txline-token.mjs  go.sh  go2.sh  kd.cjs  next.config.mjs  nyx-dump.txt  nyx-fix.sh  nyx-registry.demo.json  package-lock.json  package.json  pamm-client.cjs  pamm-decode.cjs  pamm-demo.cjs  pamm-preflight.cjs  proof.sh  revamp.sh  sh.cjs  tailwind.config.js  ti.cjs  tsconfig.json
.devcontainer/: devcontainer.json  setup.sh
app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/actions.json/: route.ts
app/app/: page.tsx
app/sandbox/: page.tsx
app/sdk/: page.tsx
app/verify/: page.tsx
components/: AgentSandbox.tsx  AgentTerminal.tsx  AmmVisualizer.tsx  AppShell.tsx  AuroraMesh.tsx  BetModal.tsx  BlinkModal.tsx  CardSpotlight.tsx  CommandLauncher.tsx  CommandPalette.tsx  ConnectWallet.tsx  CursorGlow.tsx  Distribution.tsx  FAQ.tsx  Football.tsx  Footer.tsx  Founder.tsx  GlobeSection.tsx  Hero.tsx  HeroVideo.tsx  InlineBlink.tsx  LanguageSwitcher.tsx  LiveBlink.tsx  LiveConstellation.tsx  LiveFeed.tsx  LiveStats.tsx  LiveStream.tsx  Logo.tsx  Markets.tsx  Narration.tsx  Navbar.tsx  NetworkGuard.tsx  NetworkStats.tsx  NyxEdge.tsx  PWA.tsx  PerTrackFaq.tsx  PlaceBet.tsx  PredictionAMM.tsx  ProofOfInference.tsx  ProofVerifier.tsx  (+19 more)
docs/: 06-txline-free-api.md  AI-STACK.md  TECHNICAL.md
lib/: cluster.ts  i18n.ts  poi-receipts.json  poi-verify.ts  tracks.ts
lib/agents/: edge.ts  kvcache.ts  llm.ts  orchestrator.ts  proof-of-reasoning.ts  tools.ts  types.ts
nyx-mesh/: .env.example  APPLY.md  README.md  package-lock.json  package.json
nyx-mesh/src/: agent.js  export-treasury-keypair.js  index.js  inplay-demo.js  load-env.js  mesh.js  paid-inference.js  poi-anchor-demo.js  poi-anchor.js  poi-demo.js  poi.js  provider-registry.js  qvac-brain.js  qvac-runner.js  registry-demo.js  settle-demo.js  setup-usdt.js  txline-oracle.js  wallet-info.js  wallet.js
pamm-math/: Cargo.toml
pamm-math/src/: lib.rs  pool.rs
programs/lop/: Cargo.toml
programs/nyx-dispute/: Cargo.toml
programs/nyx-dispute/src/: lib.rs
programs/nyx-oracle-bridge/: Cargo.toml
programs/nyx-pamm/: Cargo.toml
programs/nyx-pamm/src/: lib.rs
programs/nyx-settlement/: Cargo.toml  README.md
programs/nyx-settlement/src/: lib.rs
programs/nyx_agent/: Cargo.toml
programs/nyx_verifier/: Cargo.toml
programs/nyx_verifier/src/: lib.rs
programs/positions/: Cargo.toml
public/: demo-trace.json  odds-oracle-trace.json  oracle-live-trace.json  positions-trace.json  settle-verified-trace.json  settlement-trace.json  validation-trace.json
public/nyx/: deployments.json  index.html  manifest.webmanifest  nyx-config.js  nyx-qvac.js  (+2 more)
scripts/: agent-execute.mjs  allowance-bet-demo.mjs  allowance-check.mjs  allowance-claim-demo.mjs  allowance-demo.mjs  allowance-expiry-demo.mjs  anchor-poi.mjs  dispute-demo.mjs  ensure-market.mjs  fix-faq-theme.mjs  fix-landing.mjs  fix-proofs.mjs  lop-cycle.mjs  lop-keeper.mjs  lop-positions-record.mjs  lop-record.mjs  nyx-agent-loop.mjs  nyx-trustless-settle.mjs  patch-orchestrator.mjs  ref-split-mainnet.mjs  ref-split-onchain.mjs  revenue-split-demo.mjs  revert-landing.mjs  seed-all-markets.mjs  settle-from-dispute.mjs  settle-verified.mjs  settlement-cpi-demo.mjs  txline-activate.mjs  txline-finish.mjs  txline-odds-oracle.mjs  txline-oracle-keeper.mjs  txline-settle-gated.mjs  txline-validate.mjs
sdk/txodds-oracle/: Cargo.toml  README.md
sdk/txodds-oracle/src/: lib.rs
sdk/txodds-verifier/: Cargo.toml  LICENSE-MIT  README.md
sdk/txodds-verifier/examples/: build_ix.rs
sdk/txodds-verifier/src/: lib.rs
src/: demo.ts  lop.ts
test/: lop.test.ts
tracks/: README.md
(+31 files in other folders)
