[package]
name = "nyx-dispute"
version = "0.1.0"
description = "Nyx optimistic dispute + slashing layer for TxLINE settlement"
edition = "2021"
[lib]
crate-type = ["cdylib", "lib"]
name = "nyx_dispute"
[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

blake3 = "=1.5.5"
zeroize_derive = "=1.4.2"
proc-macro-crate = "=3.2.0"
indexmap = "=2.2.6"
jobserver = "=0.1.32"
borsh = "=1.5.1"
unicode-segmentation = "=1.12.0"
