[package]
name = "nyx-pamm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nyx_pamm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
pamm-math = { path = "../../pamm-math" }
blake3 = "=1.5.5"
zeroize_derive = "=1.4.2"
proc-macro-crate = "=3.2.0"
indexmap = "=2.2.6"
jobserver = "=0.1.32"
borsh = "=1.5.1"
unicode-segmentation = "=1.12.0"
