[package]
name = "nyx-settlement"
version = "0.1.0"
description = "Nyx parimutuel settlement program for verifiable World Cup markets"
edition = "2021"
[lib]
crate-type = ["cdylib", "lib"]
name = "nyx_settlement"
[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
