[package]
name = "nyx_verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","lib"]
name = "nyx_verifier"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
